* www/merge-tracking/requirements.html: Link to ViewVC for r17054.

--- a/www/merge-tracking/requirements.html
+++ b/www/merge-tracking/requirements.html
@@ -220,7 +220,8 @@ pull is not.
 <p>Another common case is porting a single change from one line to
 another.  This currently requires <code>-r&lt;X-1&gt;:X</code> syntax,
 but Subversion 1.4 will include the <code>-c</code> option (introduced
-in r17054), so users will no longer need to perform this menial
+in <a href="http://svn.collab.net/viewvc/svn?rev=17054&view=rev"
+>r17054</a>), so users will no longer need to perform this menial
 arithmetic.  However, Subversion 1.4 will still require the URL of the
 merge source to be specified; a merge tracking solution that eases
 common cases would obviate the need for the user to supply the URL
