* www/links.html (clients): Add KDESvn.

--- a/www/links.html
+++ b/www/links.html
@@ -163,6 +163,11 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
                 >http://jsvn.alternatecomputing.com/</a>
       </p></li>
 
+      <li><p><b>KDESvn</b> - A Subversion client for KDE<br/>
+        <a href="http://www.alwins-world.de/programs/kdesvn/"
+                >http://www.alwins-world.de/programs/kdesvn/</a>
+      </p></li>
+
       <li><p><b>psvn.el</b> - A Subversion interface for emacs<br/>
         <a href="http://xsteve.nit.at/prg/vc_svn/"
                 >http://xsteve.nit.at/prg/vc_svn/</a>
