--- a/www/links.html
+++ b/www/links.html
@@ -168,6 +168,11 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
                 >http://www.alwins-world.de/programs/kdesvn/</a>
       </p></li>
 
+      <li><p><b>KSvn</b> - A Subversion client for KDE -- a plugin for Konqueror<br/>
+        <a href="http://apps.intra-links.com/"
+                >http://apps.intra-links.com/</a>
+      </p></li>
+
       <li><p><b>psvn.el</b> - A Subversion interface for emacs<br/>
         <a href="http://xsteve.nit.at/prg/vc_svn/"
                 >http://xsteve.nit.at/prg/vc_svn/</a>
