* www/merge-tracking/requirements.html   Correct XHTML validation error.  Move link to Codeville merge   algorithm description into func spec.
* www/merge-tracking/func-spec.html
  Add "Related Documents and Discussion" section, with some links to
  descriptions of Codeville and its merging algorithm (temporarily
  named "Precise Codeville merge").  Some of the text was provided by
  Ben Collins-Sussman in his "report on PyCon" email.

--- a/www/merge-tracking/requirements.html
+++ b/www/merge-tracking/requirements.html
@@ -220,7 +220,7 @@ pull is not.
 <p>Another common case is porting a single change from one line to
 another.  This currently requires <code>-r&lt;X-1&gt;:X</code> syntax,
 but Subversion 1.4 will include the <code>-c</code> option (introduced
-in <a href="http://svn.collab.net/viewvc/svn?rev=17054&view=rev"
+in <a href="http://svn.collab.net/viewvc/svn?rev=17054&amp;view=rev"
 >r17054</a>), so users will no longer need to perform this menial
 arithmetic.  However, Subversion 1.4 will still require the URL of the
 merge source to be specified; a merge tracking solution that eases
@@ -289,13 +289,10 @@ functional/design spec pages.</p>
   <li><a href="jackr-diff-merge-syntax/threads.html">Mail from Jack
   Repenning about diff/merge syntax</a></li>
 -->
-  <li><a
-  href="http://thread.gmane.org/gmane.comp.version-control.revctrl/2"
-  >Bram Cohen describes Codeville's merge algorithm</a></li>
 
-  <li><a
+  <li>Bram Cohen <a
   href="http://lists.zooko.com/pipermail/revctrl/2005-May/000012.html"
-  >Bram Cohen muses on rename/copy, etc</a></li>
+  >muses on rename/copy, etc.</a></li>
 </ul>
 
 </div>  <!-- related-documents -->
