--- a/www/merge-tracking/func-spec.html
+++ b/www/merge-tracking/func-spec.html
@@ -119,6 +119,32 @@ already be accounted for.</p>
 </div>  <!-- repeated-merge -->
 
 
+<div class="h3" id="related-documents">
+<h3>Related Documents and Discussion</h3>
+
+<ul>
+  <li><a href="http://www.codeville.org/">Codeville</a> is reputed to
+  excel both in its usefulness of storage of line-history in the
+  <em>weave</em> format, and a corresponding merge algorithm:
+
+  <ul>
+    <li><a href="http://revctrl.org/PreciseCodevilleMerge">"Precise
+    Codeville merge"</a> algorithm and Python implementation.  The
+    algorithm takes into account line history, history points where
+    they came from, the ability to retrieve ancestors' text as needed,
+    and a snapshot of the current file.  It purports accuracy where
+    <a href="http://revctrl.org/CodevilleMerge">other algorithms fall
+    down</a>.</li>
+
+    <li>Bram Cohen describes <a
+    href="http://thread.gmane.org/gmane.comp.version-control.revctrl/2"
+    >the merge algorithm</a> (May 2005)</li>
+  </ul>
+  </li>
+</ul>
+
+</div>  <!-- related-documents -->
+
 </div>  <!-- h2 -->
 </body>
 </html>
