--- a/www/links.html
+++ b/www/links.html
@@ -106,11 +106,9 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
       <li><p><b>"Subversion Version Control : Using the Subversion
  Version Control System in Development Projects"</b> -
         A Subversion book by William Nagel;<br/>
-        <a href="http://www.amazon.com/exec/obidos/tg/detail/-/0131855182/qid=1109193313/sr=8-3/ref=sr_8_xs_ap_i3_xgl14/002-1377558-0648058?v=glance&amp;s=books&amp;n=507846"
-                >http://www.amazon.com/exec/obidos/tg/detail/-/0131855182/qid=1109193313/sr=8-3/&#8203;ref=sr_8_xs_ap_i3_xgl14/002-1377558-0648058?v=glance&amp;s=books&amp;n=507846</a></p>
-        <!-- &#8203; is a zero-width space. It permits the long URL to be
-             broken over two lines, and so avoids the page becoming excessively
-             wide, and requiring horizontal scrolling. -->
+		hardcopy published by Prentice Hall, downloadable as a PDF under the Open Publication License;<br/>
+        <a href="http://www.williamnagel.net/svn.php"
+                >http://www.williamnagel.net/svn.php</a></p>
       </li>
 
       <li><p><b>"Subversion in Action"</b> -
