--- a/www/merge-tracking/requirements.html
+++ b/www/merge-tracking/requirements.html
@@ -37,7 +37,7 @@ requirements that were formerly only hinted at tangentially on the
 users@ list and in other forums.</p>
 
 
-<div id="cherry-picking">
+<div class="h4" id="cherry-picking">
 <h4>Cherry Picking</h4>
 
 <p>Merge of one or more individual changes from branch A into branch
@@ -165,7 +165,7 @@ href="http://subversion.tigris.org/issues/show_bug.cgi?id=1525">issue
 </div>  <!-- dump-load -->
 
 <div id="common-case-ease">
-<h4>Interface Ease in Common Cases</h4>
+<h4>User Interface Ease in Common Cases</h4>
 
 (This was one of the points made at
 the <a
@@ -267,9 +267,10 @@ exportable and parseable.  (From the <a href="summit.html#merge-previews"
 
 </div>  <!-- requirements -->
 
+</div>  <!-- h2 -->
 
-<div class="h3" id="related-documents">
-<h3>Related Documents and Discussion</h3>
+<div class="h2" id="related-documents">
+<h2>Related Documents and Discussion</h2>
 
 <p>TODO: Many of these documents should be consolidated into the
 requirements, functional, and design specification pages of this Merge
@@ -297,6 +298,5 @@ functional/design spec pages.</p>
 
 </div>  <!-- related-documents -->
 
-</div>  <!-- h2 -->
 </body>
 </html>
