* www/merge-tracking/func-spec.html   Linked to the subversion/libsvn_fs_base/notes/structure document.   Debatable as to whether this link would be better located on   design.html.

--- a/www/merge-tracking/func-spec.html
+++ b/www/merge-tracking/func-spec.html
@@ -201,6 +201,11 @@ advance of merging in the whole thing.</p>
     >the merge algorithm</a> (May 2005)</li>
   </ul>
   </li>
+
+  <li><a
+  href="http://svn.collab.net/repos/svn/trunk/subversion/libsvn_fs_base/notes/structure">Structure
+  of the Subversion FS BerkeleyDB backend</a></li>
+
 </ul>
 
 </div>  <!-- related-documents -->
