Fix various cosmetic and documentation errors.
Patch by: Ed Price <ed.price@gmail.com>

* contrib/client-side/svn_export_empty_files.py
* contrib/client-side/svncopy.README
* contrib/hook-scripts/svn2rss.py
* notes/fs-improvements.txt
* notes/wc-improvements
* subversion/bindings/java/README
* subversion/bindings/java/javahl/src/org/tigris/subversion/javahl/tests/SVNTests.java
* subversion/include/mod_dav_svn.h
* subversion/include/svn_auth.h
* subversion/include/svn_types.h
* subversion/include/svn_wc.h
* subversion/libsvn_client/client.h
* subversion/libsvn_fs_base/notes/fs-history
* subversion/libsvn_wc/adm_ops.c
* subversion/libsvn_wc/entries.c
* subversion/libsvn_wc/entries.h
* subversion/libsvn_wc/log.c
* subversion/svn/main.c
* subversion/svnserve/serve.c
* subversion/tests/cmdline/svntest/tree.py
* www/faq.html
  Fix typos, spelling, punctuation and wording in documentation.
  Fix whitespace.

* INSTALL
* build/win32/vc6-build.bat.in
* subversion/bindings/java/javahl/src/org/tigris/subversion/javahl/tests/BasicTests.java
* subversion/tests/README
* tools/test-scripts/svntest/examples/debian-gnulinux-shared/mod_dav_svn.conf
* tools/test-scripts/svntest/mod_dav_svn.conf
  Fix test directory name in documentation and examples, after r17718 moved it.

* notes/releases.txt: Remove obsolete text.  Fix test directory name.
  Add 'make check-swig-py'.  Fix whitespace.

--- a/www/faq.html
+++ b/www/faq.html
@@ -2202,7 +2202,7 @@ process just hangs. Is my repository corrupt?</h3>
 Your repository is not corrupt, nor is your data lost. If your process
 accesses the repository directly (mod_dav_svn, svnlook, svnadmin, or
 if you access a `file://' URL), then it's using Berkeley DB to access
-your data.  Berkeley DB is journaling system, meaning that it logs
+your data.  Berkeley DB is a journaling system, meaning that it logs
 everything it is about to do before it does so.  If your process is
 interrupted (Control-C, or segfault), then a lockfile is left behind,
 along with a logfile describing unfinished business.  Any other
@@ -2339,11 +2339,11 @@ working copy is locked. Is my working copy corrupt?</h3>
 
 <p>
 Your working copy is not corrupt, nor is your data lost.  Subversion's
-working copy is journaling system, meaning that it logs everything it
+working copy is a journaling system, meaning that it logs everything it
 is about to do before it does so.  If the svn client program is
 interrupted violently (segfault or killed, not with Control-C), then
 one or more lockfiles are left behind, along with logfiles describing
-unfinished business.  (The`svn status' command will show an 'L' next
+unfinished business.  (The `svn status' command will show an 'L' next
 to locked directories.)  Any other process that attempts to access the
 working copy will fail when it sees the locks.  To awaken your working
 copy, you need to tell the svn client to finish the work.  Simply
