* www/merge-tracking/requirements.html   Added class="h4" tags to the <div> tags wrapping of individual   requirements to enforce style on their headings (consistent with   "cherry-picking").

--- a/www/merge-tracking/requirements.html
+++ b/www/merge-tracking/requirements.html
@@ -57,7 +57,7 @@ without confusing the merge tracking algorithm.</p>
 </div>  <!-- cherry picking -->
 
 
-<div id="auditing">
+<div class="h4" id="auditing">
 <h4>Auditing</h4>
 
 <p>Merge tracking must be audit-friendly, supporting some basic forms
@@ -100,7 +100,7 @@ information:</p>
 </div>  <!-- auditing -->
 
 
-<div id="repeated-merge">
+<div class="h4" id="repeated-merge">
 <h4>Repeated Merge</h4>
 
 <p>Track which changesets have been applied where, so users can
@@ -115,7 +115,7 @@ already solved, what they're calling <em>star-merge</em>.</p>
 </div>  <!-- repeated-merge -->
 
 
-<div id="rename-tracking">
+<div class="h4" id="rename-tracking">
 <h4>Track Renames in Merge</h4>
 
 <p><code>svn merge</code> needs to handle renames better.  This
@@ -148,7 +148,7 @@ tracking.</p>
 
 </div>  <!-- rename-tracking -->
 
-<div id="dump-load">
+<div class="h4" id="dump-load">
 <h4>Allow for Dump/Load</h4>
 
 <p>Whatever solution is chosen must play well with <code>svnadmin
@@ -164,7 +164,7 @@ href="http://subversion.tigris.org/issues/show_bug.cgi?id=1525">issue
 
 </div>  <!-- dump-load -->
 
-<div id="common-case-ease">
+<div class="h4" id="common-case-ease">
 <h4>User Interface Ease in Common Cases</h4>
 
 (This was one of the points made at
@@ -232,7 +232,7 @@ when a single change is ported from a branch's ancestor line.</p>
 
 </div>  <!-- common-case-ease -->
 
-<div id="automated-merge">
+<div class="h4" id="automated-merge">
 <h4>SCM Automated Merge</h4>
 
 <p>The ability to automate merges (e.g. from a stable branch to a
@@ -243,7 +243,7 @@ who do multi-thousand file merges stress this.</p>
 
 </div>  <!-- automated-merge -->
 
-<div id="distributable-resolution">
+<div class="h4" id="distributable-resolution">
 <h4>Distributability of Merge Resolution</h4>
 
 <p>The mechanism for resolving conflicts in a merge should be
@@ -255,7 +255,7 @@ the server side.  (From the <a href="summit.html#distributable-resolution"
 
 </div>  <!-- distributable-resolution -->
 
-<div id="merge-previews">
+<div class="h4" id="merge-previews">
 <h4>Merge Previews</h4>
 
 <p>Merge previews are dry runs that show conflicts and "non-trivial,
