* www/merge-tracking/requirements.html   (summary): Added "Show Available Change Sets" requirement to the    "Auditing" section (derived from svnmerge.py).

--- a/www/merge-tracking/requirements.html
+++ b/www/merge-tracking/requirements.html
@@ -59,6 +59,7 @@ users@ list and in other forums.</p>
   <li>
     <a href="#auditing">Auditing</a>
     <ul>
+      <li>Show Available Change Sets for Merge</li>
       <li><em>Merged From</em> info for Change Set and/or Path</li>
       <li><em>Merged To</em> info for Change Set and/or Path</li>
       <li>Find Paths containing Specific Incarnation of Versioned Resource</li>
