* www/merge-tracking/requirements.html   Rename the "Revert Merge" requirement to "Rollback Merge" to help   avoid confusion with 'svn revert'.
Suggested by: djames

--- a/www/merge-tracking/requirements.html
+++ b/www/merge-tracking/requirements.html
@@ -47,7 +47,7 @@ users@ list and in other forums.</p>
       <li><a href="#cherry-picking">Cherry Picking</a></li>
       <li><a href="#rename-tracking">Handles Renames</a></li>
       <li>Record Manual Merge</li>
-      <li>Revert Merge (automated or manual)</li>
+      <li>Rollback Merge (automated or manual)</li>
       <li>Block/Unblock Change Set from Merge</li>
       <li><a href="#merge-previews">Preview</a></li>
       <li><a href="#automated-merge">SCM Automation</a></li>
