* www/merge-tracking/requirements.html: Wording tweak.

--- a/www/merge-tracking/requirements.html
+++ b/www/merge-tracking/requirements.html
@@ -45,7 +45,7 @@ users@ list and in other forums.</p>
     <ul>
       <li><a href="#repeated-merge">Repeated Merge</a></li>
       <li><a href="#cherry-picking">Cherry Picking</a></li>
-      <li><a href="#rename-tracking">Handles Renames</a></li>
+      <li><a href="#rename-tracking">Handle Renames</a></li>
       <li>Record Manual Merge</li>
       <li>Rollback Merge (automated or manual)</li>
       <li>Block/Unblock Change Set from Merge</li>
