--- a/www/merge-tracking/requirements.html
+++ b/www/merge-tracking/requirements.html
@@ -46,9 +46,9 @@ users@ list and in other forums.</p>
       <li><a href="#repeated-merge">Repeated Merge</a></li>
       <li><a href="#cherry-picking">Cherry Picking</a></li>
       <li><a href="#rename-tracking">Handle Renames</a></li>
-      <li>Record Manual Merge</li>
-      <li>Rollback Merge (automated or manual)</li>
-      <li>Block/Unblock Change Set from Merge</li>
+      <li><a href="#manual-merge">Record Manual Merge</a></li>
+      <li><a href="#rollback-merge">Rollback Merge</a></li>
+      <li><a href="#revision-blocking">Block/Unblock Change Set</a></li>
       <li><a href="#merge-previews">Preview</a></li>
       <li><a href="#automated-merge">SCM Automation</a></li>
       <li><a href="#distributable-resolution">Distribution of Conflict
@@ -117,7 +117,6 @@ without confusing the merge tracking algorithm.</p>
 
 </div>  <!-- cherry picking -->
 
-
 <div class="h4" id="rename-tracking">
 <h4>Track Renames in Merge</h4>
 
@@ -150,6 +149,58 @@ discussion</a> about our rename woes, and the relationship to merge
 tracking.</p>
 
 </div>  <!-- rename-tracking -->
+
+<div class="h4" id="manual-merge">
+<h4>Record Manual Merge</h4>
+
+<p>Allow change sets to be marked as merged, effectively a way to
+manipulate the merge memory stored in the "svnmerge-integrated"
+property.  This is related to the <a href="#revision-blocking"
+>revision blocking</a> concept.</p>
+
+<p>Fundamentally, the use case is to support merge tracking of change
+set which is sufficiently different when ported to a different branch
+that use of <code>svn merge</code> is no longer appropriate.  Examples
+scenarios include:
+
+<ul>
+  <li>The actual change you want to apply to branch has no overlap
+  with its incarnation on the source branch, yet is conceptually
+  equivalent.</li>
+
+  <li>Only a subset of a change set warrants application.</li>
+
+  <li>The branch content has drifted far enough apart to make
+  automatic merging impossible.</li>
+</ul>
+
+David James cites a specific example from Subversion's own
+development:
+
+<blockquote>"When I merge from trunk to 1.3.x, I often run into
+conflicts, so I create a temporary merge branch. If I tried to merge
+from the temporary merge branch to 1.3.x, the merge metadata would be
+lost because svnmerge.py does not track indirect metadata. To correct
+this metadata, I'd use [this feature]."</blockquote></p>
+
+</div>  <!-- manual-merge -->
+
+<div class="h4" id="rollback-merge">
+<h4>Rollback Merge</h4>
+
+<p>Undo a merge and/or associated tracking meta data.  Necessary for
+both <a href="#repeated-merge">automated</a> and <a
+href="#manual-merge">manual</a> merges.</p>
+
+</div>  <!-- rollback-merge -->
+
+<div class="h4" id="revision-blocking">
+<h4>Block/Unblock Change Set</h4>
+
+<p>Protect revisions which should never be merged from accidental
+merging.</p>
+
+</div>  <!-- revision-blocking -->
 
 <div class="h4" id="merge-previews">
 <h4>Merge Previews</h4>
