* www/merge-tracking/requirements.html   (distributable-resolution): Corrected grammatical typo.

--- a/www/merge-tracking/requirements.html
+++ b/www/merge-tracking/requirements.html
@@ -231,7 +231,7 @@ distributable across N developers.  Meeting this requirement might
 mean a departure for Subversion, since it implies that merge results
 are not just stored in one working copy, but are somehow available on
 the server side.  (From the <a href="summit.html#distributable-resolution"
->distributable resolution item</a> in the summit summary).</p>
+>distributable resolution item</a> in the summit summary.)</p>
 
 </div>  <!-- distributable-resolution -->
 
