--- a/www/merge-tracking/requirements.html
+++ b/www/merge-tracking/requirements.html
@@ -303,10 +303,9 @@ href="http://subversion.tigris.org/issues/show_bug.cgi?id=1525">issue
 <div class="h4" id="common-case-ease">
 <h4>User Interface Ease in Common Cases</h4>
 
-(This was one of the points made at
-the <a
+<p>(This was one of the points made at the <a
 href="http://svn.collab.net/repos/svn/trunk/notes/EuroOSCON-2005-vc-bof.txt"
->EuroOSCON 2005 Version Control BOF session</a>.)
+>EuroOSCON 2005 Version Control BOF session</a>.)</p>
 
 <p>The interface for common-case merges should be easy.  Currently it
 is not.  For example, a very common case is merging all previously
