* www/merge-tracking/summit-survey.html: Dunno what was up with   introductory paragraph, but fix it.

--- a/www/merge-tracking/summit-survey.html
+++ b/www/merge-tracking/summit-survey.html
@@ -21,9 +21,9 @@
 <div class="h2">
 <h2>CollabNet Merge Tracking Summit Survey</h2>
 
-<p>Survey responses CollabNet's to pre-<a href="summit.html">summit</a>
-questionnaire survey are listed below by responding company
-vertical.</p>
+<p>Responses to CollabNet's pre-<a href="summit.html">summit</a>
+questionnaire are given below.  The respondents are anonymous,
+but we indicate what business each is in.</p>
 
 
 <div class="h3" id="web-info-services">
