--- a/www/merge-tracking/requirements.html
+++ b/www/merge-tracking/requirements.html
@@ -60,6 +60,7 @@ users@ list and in other forums.</p>
     <a href="#auditing">Auditing</a>
     <ul>
       <li>Show Available Change Sets for Merge</li>
+      <li>Show Change Sets Already Merged</li>
       <li><em>Merged From</em> info for Change Set and/or Path</li>
       <li><em>Merged To</em> info for Change Set and/or Path</li>
       <li>Find Paths containing Specific Incarnation of Versioned Resource</li>
