--- a/www/merge-tracking/requirements.html
+++ b/www/merge-tracking/requirements.html
@@ -59,7 +59,7 @@ users@ list and in other forums.</p>
   <li>
     <a href="#auditing">Auditing</a>
     <ul>
-      <li>Show Available Change Sets for Merge</li>
+      <li>Show Change Sets Available for Merge</li>
       <li>Show Change Sets Already Merged</li>
       <li><em>Merged From</em> info for Change Set and/or Path</li>
       <li><em>Merged To</em> info for Change Set and/or Path</li>
@@ -115,6 +115,10 @@ multiple different directions.  For example, if you create a release
 branch B by copying the trunk you should be able to both forward port
 changes made on B into trunk and backport changes made on trunk into B
 without confusing the merge tracking algorithm.</p>
+
+<p>Use is predicated on information from the <em>Show Change Sets
+Available for Merge</em> feature (<a href="#auditing">Auditing</a>
+section).</p>
 
 </div>  <!-- cherry picking -->
 
@@ -184,6 +188,10 @@ from the temporary merge branch to 1.3.x, the merge metadata would be
 lost because svnmerge.py does not track indirect metadata. To correct
 this metadata, I'd use [this feature]."</blockquote></p>
 
+<p>Use is predicated on information from the <em>Show Change Sets
+Available for Merge</em> feature (<a href="#auditing">Auditing</a>
+section).</p>
+
 </div>  <!-- manual-merge -->
 
 <div class="h4" id="rollback-merge">
@@ -192,6 +200,10 @@ this metadata, I'd use [this feature]."</blockquote></p>
 <p>Undo a merge and/or associated tracking meta data.  Necessary for
 both <a href="#repeated-merge">automated</a> and <a
 href="#manual-merge">manual</a> merges.</p>
+
+<p>Use is predicated on information from the <em>Show Change Sets
+Available for Merge</em> and <em>Show Change Sets Already Merged</em>
+features (<a href="#auditing">Auditing</a> section).</p>
 
 </div>  <!-- rollback-merge -->
 
