* www/merge-tracking/requirements.html   (cherry-picking, manual-merge, rollback-merge): Wording tweak to    indicate that the use case dependencies are sometimes optional.

--- a/www/merge-tracking/requirements.html
+++ b/www/merge-tracking/requirements.html
@@ -116,7 +116,7 @@ branch B by copying the trunk you should be able to both forward port
 changes made on B into trunk and backport changes made on trunk into B
 without confusing the merge tracking algorithm.</p>
 
-<p>Use is predicated on information from the <em>Show Change Sets
+<p>Use may be predicated on information from the <em>Show Change Sets
 Available for Merge</em> feature (<a href="#auditing">Auditing</a>
 section).</p>
 
@@ -188,7 +188,7 @@ from the temporary merge branch to 1.3.x, the merge metadata would be
 lost because svnmerge.py does not track indirect metadata. To correct
 this metadata, I'd use [this feature]."</blockquote></p>
 
-<p>Use is predicated on information from the <em>Show Change Sets
+<p>Use may be predicated on information from the <em>Show Change Sets
 Available for Merge</em> feature (<a href="#auditing">Auditing</a>
 section).</p>
 
@@ -201,7 +201,7 @@ section).</p>
 both <a href="#repeated-merge">automated</a> and <a
 href="#manual-merge">manual</a> merges.</p>
 
-<p>Use is predicated on information from the <em>Show Change Sets
+<p>Use may be predicated on information from the <em>Show Change Sets
 Available for Merge</em> and <em>Show Change Sets Already Merged</em>
 features (<a href="#auditing">Auditing</a> section).</p>
 
