--- a/www/hacking.html
+++ b/www/hacking.html
@@ -1911,16 +1911,24 @@ consensus; there are no formal rules governing the procedure, though
 generally if someone strongly objects the access is not offered, or is
 offered on a provisional basis.</p>
 
-<p>The criteria for commit access are that the person's patches adhere
-to the guidelines in this file, adhere to all the usual unquantifiable
-rules of coding (code should be readable, robust, maintainable, etc),
-and that the person respects the "Hippocratic Principle": first, do no
-harm.  In other words, what is significant is not the size or quantity
-of patches submitted, but the degree of care shown in avoiding bugs
-and minimizing unnecessary impact on the rest of the code.  Many full
-committers are people who have not made major code contributions, but
-rather lots of small, clean fixes, each of which was an unambiguous
-improvement to the code.</p>
+<p><i>The primary criterion for full commit access is good
+judgment.</i>
+
+<p>You do not have to be a technical wizard, or demonstrate deep
+knowledge of the entire codebase, to become a full committer.  You
+just need to know what you don't know.  If your patches adhere to the
+guidelines in this file, adhere to all the usual unquantifiable rules
+of coding (code should be readable, robust, maintainable, etc), and
+respect the Hippocratic Principle of "first, do no harm", then you
+will probably get commit access pretty quickly.  The size, complexity,
+and quantity of your patches do not matter as much as the degree of
+care you show in avoiding bugs and minimizing unnecessary impact on
+the rest of the code.  Many full committers are people who have not
+made major code contributions, but rather lots of small, clean fixes,
+each of which was an unambiguous improvement to the code.  (Of course,
+this does not mean the project needs a bunch of very trivial patches
+whose only purpose is to gain commit access; knowing what's worth a
+patch post and what's not is part of showing good judgement :-) .)</p>
 
 <p>To assist developers in discovering new committers, we record
 patches and other contributions in a <a href="#crediting">special
