* www/hacking.html: Add missing punctuation.

--- a/www/hacking.html
+++ b/www/hacking.html
@@ -1918,7 +1918,7 @@ judgment.</i>
 knowledge of the entire codebase, to become a full committer.  You
 just need to know what you don't know.  If your patches adhere to the
 guidelines in this file, adhere to all the usual unquantifiable rules
-of coding (code should be readable, robust, maintainable, etc), and
+of coding (code should be readable, robust, maintainable, etc.), and
 respect the Hippocratic Principle of "first, do no harm", then you
 will probably get commit access pretty quickly.  The size, complexity,
 and quantity of your patches do not matter as much as the degree of
@@ -2568,7 +2568,7 @@ it.</p>
 
 <p>There is a somewhat looser voting system for areas that are not
 core code, and that may have fewer experts available to review changes
-(for example, tools/, packages/, bindings/, test scripts, etc).  A
+(for example, tools/, packages/, bindings/, test scripts, etc.).  A
 change in these areas can go in with a +1 from a full committer or a
 partial committer for that area, at least one +0 or "concept +1" from
 any other committer, and no vetoes.  (If a change affects the build
