--- a/www/project_status.html
+++ b/www/project_status.html
@@ -64,6 +64,9 @@ Subversion 2.0.</p>
 
 <ul>
   <li>
+    <b>Subversion 1.3.1</b> (Monday, 3 April 2006): Bugfix release.
+  </li>
+  <li>
     <b>Subversion 1.3.0</b> (Tuesday, 3 January 2006, RC4 shipped Wednesday, 30 November 2005; RC7 shipped Friday, 23 December 2005): Feature and bugfix release, see the <a href="svn_1.3_releasenotes.html">release notes</a>.
   </li>
   <li>
