--- a/www/hacking.html
+++ b/www/hacking.html
@@ -1113,7 +1113,7 @@ href="http://svn.collab.net/repos/svn/trunk/subversion/tests/README"
 href="http://svn.collab.net/repos/svn/trunk/subversion/tests/cmdline/README"
 >subversion/tests/cmdline/README</a>.</p>
 
-<a>Various people have arranged for the automated test framework to
+<p>Various people have arranged for the automated test framework to
 run at regular intervals on their own machines, sending the results to
 the svn-breakage@subversion.tigris.org mailing list.  The more
 different platforms the tests run on, the more quickly we can detect
@@ -1130,8 +1130,8 @@ farm at <a href="http://www.mobsol.be/buildbot/"
 >http://www.mobsol.be/buildbot/</a>, see his message</p>
 
 <pre>
-   <a href="http://subversion.tigris.org/servlets/ReadMsg?list=dev&msgNo=114212">http://subversion.tigris.org/servlets/ReadMsg?list=dev&amp;msgNo=114212</a>
-   (Thread URL: <a href="http://subversion.tigris.org/servlets/BrowseList?list=dev&by=thread&from=450110">http://subversion.tigris.org/servlets/BrowseList?list=dev&amp;by=thread&amp;from=450110</a>)
+   <a href="http://subversion.tigris.org/servlets/ReadMsg?list=dev&amp;msgNo=114212">http://subversion.tigris.org/servlets/ReadMsg?list=dev&amp;msgNo=114212</a>
+   (Thread URL: <a href="http://subversion.tigris.org/servlets/BrowseList?list=dev&amp;by=thread&amp;from=450110">http://subversion.tigris.org/servlets/BrowseList?list=dev&amp;by=thread&amp;from=450110</a>)
    Message-ID: 20060326205918.F3C50708B0@adicia.telenet-ops.be
    From: "Lieven Govaerts" &lt;lgo@mobsol.be&gt;
    To: &lt;dev@subversion.tigris.org&gt;
@@ -1139,7 +1139,7 @@ farm at <a href="http://www.mobsol.be/buildbot/"
    Date: Sun, 26 Mar 2006 22:56:11 +0200
 </pre>
 
-for more details.  (<a href="http://buildbot.sourceforge.net/"
+<p>for more details.  (<a href="http://buildbot.sourceforge.net/"
 >BuildBot</a> is a system for centrally managing multiple automated
 testing environments; it's especially useful for portability testing,
 including of uncommitted changes.)</p>
@@ -1912,7 +1912,7 @@ generally if someone strongly objects the access is not offered, or is
 offered on a provisional basis.</p>
 
 <p><i>The primary criterion for full commit access is good
-judgment.</i>
+judgment.</i></p>
 
 <p>You do not have to be a technical wizard, or demonstrate deep
 knowledge of the entire codebase, to become a full committer.  You
