--- a/www/release-process.html
+++ b/www/release-process.html
@@ -114,7 +114,7 @@ Release Manager creates it with the following procedure (substitute
 A.B with the version you're preparing, eg. 1.3, or 2.0):</p>
 
 <ul>
-<li><p>Create the new release branch with a server-side copy:<p>
+<li><p>Create the new release branch with a server-side copy:</p>
     <pre>
       svn cp http://svn.collab.net/repos/svn/trunk \
              http://svn.collab.net/repos/svn/branches/A.B.x \
@@ -138,7 +138,7 @@ A.B with the version you're preparing, eg. 1.3, or 2.0):</p>
     <p>Leave the release date blank for now. It will remain this way
     until rolling time.</p></li>
 
-<li><p>Commit both these changes with the following log message:<p>
+<li><p>Commit both these changes with the following log message:</p>
     <pre>
       Increment the trunk version number, and introduce a new CHANGES
       section for the upcoming A.B.0 release.
@@ -164,8 +164,8 @@ in from trunk.</p>
 <p>The protocol used to accept or refuse the merging of changes from
 trunk is of interest to all Subversion developers, and as such is
 documented in <a
-href="file:///home/dave/svn/trunk/www/hacking.html#release-stabilization">the
-release stabilization section of hacking guide</a>.</p>
+href="hacking.html#release-stabilization">the
+release stabilization section of the hacking guide</a>.</p>
 
 </div>
 
