Correct small mistakes such as typo, following the "obvious fix" rule.
* www/hacking.html
  (directory-layout): Supply missing closing-parentheses.
  (error-messages): Supply missing "e.g. " and double quotation marks.
  Also, remove a duplicate period.

* www/project_development.html
  (Translating Subversion output): Supply missing "in".

--- a/www/hacking.html
+++ b/www/hacking.html
@@ -364,12 +364,12 @@ to ask for review on the developer mailing list.</p>
 <li><p><tt>apr/</tt><br />
     Apache Portable Runtime library.  (Note: This is not in the same
     repository as Subversion.  Read INSTALL for instructions on how to
-    get it if you don't already have it.</p>
+    get it if you don't already have it.)</p>
 </li>
 <li><p><tt>neon/</tt><br />
     Neon library from Joe Orton.  (Note: This is not in the same
     repository as Subversion.  Read INSTALL for instructions on how to
-    get it if you don't already have it.</p>
+    get it if you don't already have it.)</p>
 </li>
 </ul>
 
@@ -608,7 +608,7 @@ as you might think, and if you'd like to become one of them, then add
 
 <li><p>Don't include newline characters in error messages.</p></li>
 
-<li><p>Quoting information is done using single quotes ('some info').</p></li>
+<li><p>Quoting information is done using single quotes (e.g. "'some info'").</p></li>
 
 <li><p>Don't include the name of the function where the error occurs
      in the error message. If subversion is compiled using the
@@ -616,7 +616,7 @@ as you might think, and if you'd like to become one of them, then add
      information by itself.</p></li>
 
 <li><p>When including path or filenames in the error string, be sure
-     to quote them. (e.g. "Can't find '/path/to/repos/userfile'").</p></li>
+     to quote them (e.g. "Can't find '/path/to/repos/userfile'").</p></li>
 
 <li><p>When including path or filenames in the error string, be sure
      to convert them using 'svn_path_local_style()' before inclusion.</p></li>
