--- a/www/project_development.html
+++ b/www/project_development.html
@@ -42,7 +42,7 @@ translated.  Discussion takes place both on the Subversion development
 mailing list as well as dedicated native language mailing lists
 (<em>l10n-??@subversion.tigris.org</em>).</p>
 
-<p>Next to any information the <a href="hacking.html">Hacker's Guide
+<p>Next to any information in the <a href="hacking.html">Hacker's Guide
 to Subversion</a> pertinent to translating Subversion output,
 additional information can be found in</p>
 
