Add missing descriptions to web pages.
Patch by: nori

* www/svn_1.1_releasenotes.html
 (Localized messages): Add missing descriptions for Traditional
 Chinese, Japanese, and Brazilian Portuguese.
* www/project_status.html
 (done): Add a link to www/svn_1.1_releasenotes.html, like those to
 www/svn_1.2_releasenotes.html and www/svn_1.3_releasenotes.html.

--- a/www/svn_1.1_releasenotes.html
+++ b/www/svn_1.1_releasenotes.html
@@ -147,8 +147,9 @@ feature</em>)</h4>
 
 <p>Subversion 1.1 is now using gettext() to display translated error,
    informational, and help messages to the user.  We currently have
-   translations for German, Spanish, Polish, Swedish, and Norwegian
-   Bokmal, and we're looking for volunteers to write translations for
+   translations for German, Spanish, Polish, Swedish, Norwegian
+   Bokmal, Traditional Chinese, Japanese, and Brazilian Portuguese,
+   and we're looking for volunteers to write translations for
    other languages.  To localize your Subversion client, just set your
    LANG environment variable:</p>
 
