* www/links.html  (converters): Update vss2svn entry for its new project page, and for   consistency with other "converters" entries.
Patch by: Toby Johnson <toby@etjohnson.us>
(Tweaked by me.)

--- a/www/links.html
+++ b/www/links.html
@@ -392,9 +392,10 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
                 >http://search.cpan.org/perldoc?VCP::Dest::svk</a><br/>
       </p></li>
 
-      <li><p>Visual Source Safe to Subversion (vss2svn.pl)<br/>
-       <a href="http://vss2svn.tigris.org/"
-               >http://vss2svn.tigris.org/</a>
+      <li><p><b>vss2svn</b> - Microsoft Visual Source Safe (VSS) to
+       Subversion<br/>
+       <a href="http://www.pumacode.org/projects/vss2svn"
+               >http://www.pumacode.org/projects/vss2svn</a>
       </p></li>
     </ul>
 
