Cross-link some useful pages, and add a new query to the "Upcoming" section of the status page.
* www/project_status.html
  Add a link for issues under consideration for 2.0.0, with big fat
  warnings.

* www/project_tasks.html
  Link to issue queries present on project_status.html, and to
  roadmap.html, with an explanation of what can be found there.  While
  somewhat redundant with the left nav, this is useful navigation to
  anyone interested in major milestones in Subversion's vision.

--- a/www/project_status.html
+++ b/www/project_status.html
@@ -41,6 +41,7 @@ href="roadmap.html">roadmap</a> page.</p>
     See <a href="http://subversion.tigris.org/issues/buglist.cgi?component=subversion&amp;issue_status=NEW&amp;issue_status=STARTED&amp;issue_status=REOPENED&amp;target_milestone=1.4&amp;target_milestone=1.4-consider"
     >open issues marked for 1.4 or 1.4-consider</a>.</p>
   </li>
+
   <li>
     <p><b>Subversion 1.5.0</b> (<i>future</i>):
     Feature and bugfix release.<br />
@@ -48,6 +49,14 @@ href="roadmap.html">roadmap</a> page.</p>
     >open issues marked for 1.5 or 1.5-consider</a>.</p>
   </li>
 
+  <li>
+    <p><b>Subversion 2.0.0</b> (<i>future</i>):
+    Feature and <a href="hacking.html#release-numbering"
+    >compatibility-affecting</a> release.<br />
+    See <a href="http://subversion.tigris.org/issues/buglist.cgi?component=subversion&amp;issue_status=NEW&amp;issue_status=STARTED&amp;issue_status=REOPENED&amp;target_milestone=2.0"
+    >open issues <em>under consideration</em> for 2.0</a>
+    (<em>absolutely not commitments</em>, and likely to change).</p>
+  </li>
 </ul>
 
 </div>
