--- a/www/project_tasks.html
+++ b/www/project_tasks.html
@@ -159,6 +159,11 @@ see the <a
 href="http://subversion.tigris.org/mailing-list-guidelines.html#patches"
 >patch posting guidelines</a>.</p>
 
+<p>For <a href="project_status.html#upcoming">groups of tasks tied to
+specific releases</a>, peruse the <a href="project_status.html">status
+page</a>.  For a longer-term view of Subversion's vision, see the <a
+href="roadmap.html">road map</a>.</p>
+
 <div class="h3" id="ra_svn_authn" title="ra_svn_authn">
 <h3><a href="http://subversion.tigris.org/issues/show_bug.cgi?id=1144"
 >Issue&nbsp;#1144</a>: Add Cyrus/SASL authentication support to
