* www/links.html: Add ZigVersion.
Patch by: Shlomi Fish <shlomif@iglu.org.il>

--- a/www/links.html
+++ b/www/links.html
@@ -299,6 +299,12 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
                 >http://pysvn.tigris.org/</a>
       </p></li>
 
+      <li><p><b>ZigVersion</b> - a Subversion Interface for Mac OS X. Aims to
+        design an interface around the typical workflows of programmers.<br/>
+        <a href="http://zigversion.com/"
+                >http://zigversion.com/</a>
+      </p></li>
+
     </ul>
 
 </div>
